force-app/main/default/objects/Roles_myDesk__c/Roles_myDesk__c.object-meta.xml
<CustomObject>
    <label>Roles myDesk</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roles myDesk</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>