force-app/main/default/objects/Roles_myDesk__c/fields/CallCenterId__c.field-meta.xml
<CustomField>
    <fullName>CallCenterId__c</fullName>
    <label>CallCenterId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>