force-app/main/default/objects/Roles_myDesk__c/fields/Equipe__c.field-meta.xml
<CustomField>
    <fullName>Equipe__c</fullName>
    <label>Equipe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opérations</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>DAF CDG</fullName>
            </value>
            <value>
                <fullName>Régie Physique</fullName>
            </value>
            <value>
                <fullName>Direction</fullName>
            </value>
            <value>
                <fullName>Projet</fullName>
            </value>
            <value>
                <fullName>Data / BI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>