force-app/main/default/objects/Roles_myDesk__c/fields/ProfileId__c.field-meta.xml
<CustomField>
    <fullName>ProfileId__c</fullName>
    <label>ProfileId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>