force-app/main/default/objects/Roles_myDesk__c/fields/RoleId__c.field-meta.xml
<CustomField>
    <fullName>RoleId__c</fullName>
    <label>RoleId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>