force-app/main/default/objects/Roles_myDesk__c/fields/UserPermissionsSupportUser__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionsSupportUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UserPermissionsSupportUser</label>
    <type>Checkbox</type>
</CustomField>