force-app/main/default/objects/Roles_myDesk__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProfileId__c</columns>
    <columns>RoleId__c</columns>
    <columns>Equipe__c</columns>
    <columns>CallCenterId__c</columns>
    <columns>UserPermissionsSupportUser__c</columns>
    <columns>Notification__c</columns>
    <columns>Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>